working with conversion json file to csv file

--- a/testCSVToJSON/package.json
+++ b/testCSVToJSON/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "csv-parser": "^3.0.0"
+    "csv-parser": "^3.0.0",
+    "json2csv": "^6.0.0-alpha.2"
   }
 }
